# gladdbot

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
data/: emotes.json  havok.json  instructions.txt  moderators.json  phrases.json  regulars.json  users.json
src/: ai.ts  aistats.ts  auth.ts  chat.ts  cron.ts  db.rs  db.ts  env.d.ts  index.ts  irc.rs  main.rs  model.ts  queue.ts  redis.ts  twitch.ts  util.ts
src/commands/: ai.ts  aihelp.ts  ainerd.ts  aiping.ts  aistats.ts  hi.rs  index.ts  mod.rs  roulette.rs
src/events/: message.ts
